Update client routes and regenerate api client schemas
